<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <include layout="@layout/custom_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <!--球队logo-->
            <ImageView
                android:id="@+id/iv_teamLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="@dimen/teamLogo_maxWidthForInfo"
                android:layout_alignTop="@+id/teamInfo_layout"
                android:layout_alignBottom="@+id/teamInfo_layout"/>

            <LinearLayout
                android:id="@+id/teamInfo_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toRightOf="@+id/iv_teamLogo"
                android:layout_marginLeft="@dimen/activity_horizontal_margin">

                <!--球队名字-->
                <TextView
                    android:id="@+id/tv_teamName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/teamTitleSize"/>

                <!--赛季年份-->
                <TextView
                    android:id="@+id/tv_season"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/teamInfoSize"
                    android:layout_marginTop="@dimen/teamInfo_vertical_margin"
                    android:layout_marginLeft="@dimen/team_horizontal_margin"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/teamInfo_vertical_margin"
                    android:layout_marginLeft="@dimen/team_horizontal_margin">

                    <!--胜负场数-->
                    <TextView
                        android:id="@+id/tv_winlose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_white"
                        android:textSize="@dimen/teamInfoSize"/>

                    <!--球队在联盟中的排名-->
                    <TextView
                        android:id="@+id/tv_rank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_white"
                        android:textSize="@dimen/teamInfoSize"
                        android:layout_marginLeft="20dp"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <!--宽5dp的空白区域 UI优化需要-->
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp">

        </View>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--导航栏-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/guide_vertical_margin">

            <TextView
                android:id="@+id/tv_teamGuide1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/text_teamGuide1"
                android:textSize="@dimen/teamGuideSize"
                android:textColor="@color/text_white"
                android:alpha="0.5"/>


            <TextView
                android:id="@+id/tv_teamGuide2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/text_teamGuide2"
                android:textSize="@dimen/teamGuideSize"
                android:textColor="@color/text_white"
                android:alpha="0.5" />

            <TextView
                android:id="@+id/tv_teamGuide3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/text_teamGuide3"
                android:textSize="@dimen/teamGuideSize"
                android:textColor="@color/text_white"
                android:alpha="0.5"/>

            <TextView
                android:id="@+id/tv_teamGuide4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/text_teamGuide4"
                android:textSize="@dimen/teamGuideSize"
                android:textColor="@color/text_white"
                android:alpha="0.5"/>

        </LinearLayout>


        <!--滑块-->
        <ImageView
            android:id="@+id/iv_teamCursor"
            android:layout_width="9dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/guide_vertical_margin"
            android:src="@color/color_white"
            android:scaleType="matrix">

        </ImageView>

        <!--ViewPager-->
        <include layout="@layout/myviewpager"/>

    </LinearLayout>




</LinearLayout>