<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    >


    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernameWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="30sp"
            android:hint="用户名" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:textSize="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <!--球迷-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/welcome_01"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:alpha="0.5"
                android:background="@drawable/ch_fans">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/character_01"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/twice_activity_vertical_margin"/>

        </LinearLayout>

        <!--教练-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/welcome_02"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:alpha="0.5"
                android:background="@drawable/ch_coach">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/character_02"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/twice_activity_vertical_margin"/>

        </LinearLayout>

        <!--球探-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/welcome_03"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:alpha="0.5"
                android:background="@drawable/ch_search">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/character_03"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/twice_activity_vertical_margin"/>

        </LinearLayout>

    </LinearLayout>


    <ImageView
        android:id="@+id/iv_commit"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/commit"
        android:layout_gravity="center"/>


</LinearLayout>